--- a/pollyanna.html
+++ b/pollyanna.html
@@ -8,7 +8,7 @@
     <header>
     <h1>Welcome to The Pollyanna Picker</h1>
     </header>
-  <script src="playground.js"></script>
+  <script src="algo.js"></script>
   <p>This is the body text of my webpage. You can add any content here.</p>
   <div id="dictionary-container">
     <!-- This is where the dictionary content will be displayed -->
