--- a/pollyanna.html
+++ b/pollyanna.html
@@ -41,6 +41,7 @@
     <!-- This is where the dictionary content will be displayed -->
   </div>
 
+  <p>Here are the results! Giver : Receiever.</p>
   <div id="dictionary-container">
     <!-- This is where the dictionary content will be displayed -->
   </div>
