get display after each participant add

--- a/pollyanna.html
+++ b/pollyanna.html
@@ -16,11 +16,11 @@
   </form>
   <script src="event_handler.js"></script>
 
-  <button id="finishedAdding">All Done!</button>
+  <!-- <button id="finishedAdding">All Done!</button> -->
 
   <script src="array_display.js"></script>
 
-  <script>
+  <!-- <script>
     const button = document.getElementById("finishedAdding");
     button.addEventListener("click", function() {
     // Write your JavaScript code here
@@ -30,18 +30,20 @@
     // let rest = participants.map(x => ({[x]: [x]}));
     // console.log(rest)
     });
-  </script>
+  </script> -->
 
 <button id="runIt">Let's See Who Has Whom!</button>
 
 
   <script src="algo.js"></script>
 
-  <div id="array-container">
+  <!-- <div id="array-container"> -->
     <!-- This is where the dictionary content will be displayed -->
-  </div>
+  <!-- </div> -->
+  <div id="message"></div>
+  <div id="listContainer"></div>
 
-  <p>Here are the results! Giver : Receiever.</p>
+  <!-- <p>Here are the results! Giver : Receiever.</p> -->
   <div id="dictionary-container">
     <!-- This is where the dictionary content will be displayed -->
   </div>
